--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,6 @@
             <div class="map_inner" id="map-inner"></div>
         </div>
     </div>
-
-    <script src="places.js"></script>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
